--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <div class="wrapper">
-        
+        <header class="header">
+
+        </header>
+
+
+        <footer class="footer">
+            
+        </footer>
     </div>
 </body>
 </html>
