проверка директивы @@include

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,8 +9,7 @@
   <body>
     <div class="wrapper">
       @@include('../partials/header.html')
-      <main class="main-content">
-      </main>
+      <main class="main-content">Мэйн контент </main>
       @@include('../partials/footer.html')
     </div>
   </body>
