--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-    <div class="wrapper">
+    
       @@include('../partials/header.html')
-      <main class="main-content">Мэйн контент </main>
+      <main class="main-content"></main>
       @@include('../partials/footer.html')
-    </div>
+  
   </body>
 </html>
