--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,10 @@
   <body>
     
       @@include('../partials/header.html')
-      <main class="main-content"></main>
+      <main class="main-content">
+        @@include('../partials/hero.html')
+
+      </main>
       @@include('../partials/footer.html')
   
   </body>
