--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
       @@include('../partials/header.html')
       <main class="main-content">
         @@include('../partials/hero.html')
+        @@include('../partials/advantages.html')
 
       </main>
       @@include('../partials/footer.html')
