--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,6 +12,7 @@
       <main class="main-content">
         @@include('../partials/hero.html')
         @@include('../partials/advantages.html')
+        @@include('../partials/products.html')
 
       </main>
       @@include('../partials/footer.html')
