--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,6 +13,7 @@
         @@include('../partials/hero.html')
         @@include('../partials/advantages.html')
         @@include('../partials/products.html')
+        @@include('../partials/promotion.html')
 
       </main>
       @@include('../partials/footer.html')
