section "ideas" attached

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,7 @@
         @@include('../partials/advantages.html')
         @@include('../partials/products.html')
         @@include('../partials/promotion.html')
-
+        @@include('../partials/ideas.html')
       </main>
       @@include('../partials/footer.html')
   
