--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,6 +15,7 @@
         @@include('../partials/products.html')
         @@include('../partials/promotion.html')
         @@include('../partials/ideas.html')
+        @@include('../partials/contacts.html')
       </main>
       @@include('../partials/footer.html')
   
