Включение стилей для других страниц (подсоединено)

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     @@include('../partials/header.html')
-    <main>
+    <main class="card__content">
         <h1>C.A.R.D.</h1>
-        
+        <h2>check</h2>
     </main>
     @@include('../partials/footer.html')
 </body>
