--- a/src/pages/errorpage.html
+++ b/src/pages/errorpage.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     @@include('../partials/header.html')
-    <main>
-        <h1>404 - Страница не найдена</h1>
+    <main class="danger">
+        <h3>404 - Страница не найдена</h3>
         <p>Извините, но такой страницы не существует.</p>
     </main>
 </body>
