убираем стилевые заглушки и подсоединяем секцию contacts к другим страницам

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -12,6 +12,7 @@
         <h1>C.A.R.D.</h1>
         <h2>check</h2>
     </main>
+    @@include('../partials/contacts.html')
     @@include('../partials/footer.html')
 </body>
 </html>
