--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -12,6 +12,7 @@
         <h1>Каталог товаров</h1>
         <div class="catalogue"></div>
     </main>
+    @@include('../partials/contacts.html')
     @@include('../partials/footer.html')
 </body>
 </html>
