Page 404 (errorpage.html): done

--- a/src/pages/errorpage.html
+++ b/src/pages/errorpage.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     @@include('../partials/header.html')
-    <main class="danger">
-        <h3>404 - Страница не найдена</h3>
-        <p>Извините, но такой страницы не существует.</p>
+    <main class="error-page">
+        <img src="/img/404.png" alt="404" class="error-page__image" />
+        <h1 class="error-page__title">Страница не найдена</h1>
+        <a href="/" class="error-page__link">На главную</a>
     </main>
 </body>
 </html>
