примерный вид страницы catalogue.html

--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -27,7 +27,8 @@
           
         </div>
         <hr class="catalog__divider"/>
-        <div class="catalog__items">
+        <div class="catalog__content">
+        <div class="catalog__accordion">
             <div class="catalog__accordion-item">
                 <span class="catalog__accordion-title">Вид Камня</span>
                 <svg class="icon" width="7" height="12">
@@ -53,6 +54,18 @@
                 </svg>
             </div>
         </div>
+        <div class="catalog__gallery">
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+            <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
+        </div>
+    </div>
     </main>
     @@include('../partials/contacts.html')
     @@include('../partials/footer.html')
