--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -66,6 +66,11 @@
             <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
         </div>
     </div>
+    <div class="catalog__linkwrap">
+    <a href="#" class="catalog__showmore">Показать еще<svg class="icon" width="24" height="24">
+        <use xlink:href="img/symbol/sprite.svg#viewarrowblack"></use>
+      </svg></a>
+    </div>
     </main>
     @@include('../partials/contacts.html')
     @@include('../partials/footer.html')
