label для каждого пункта аккордеона

--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -29,30 +29,30 @@
         <hr class="catalog__divider"/>
         <div class="catalog__content">
         <div class="catalog__accordion">
-            <div class="catalog__accordion-item">
+            <label class="catalog__accordion-item">
                 <span class="catalog__accordion-title">Вид Камня</span>
                 <svg class="icon" width="7" height="12">
                     <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
                 </svg>
-            </div>
-            <div class="catalog__accordion-item">
+            </label>
+            <label class="catalog__accordion-item">
                 <span class="catalog__accordion-title">Изделие</span>
                 <svg class="icon" width="7" height="12">
                     <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
                 </svg>
-            </div>
-            <div class="catalog__accordion-item">
+            </label>
+            <label class="catalog__accordion-item">
                 <span class="catalog__accordion-title">Месторождение</span>
                 <svg class="icon" width="7" height="12">
                     <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
                 </svg>
-            </div>
-            <div class="catalog__accordion-item">
+            </label>
+            <label class="catalog__accordion-item">
                 <span class="catalog__accordion-title">Цвет</span>
                 <svg class="icon" width="7" height="12">
                     <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
                 </svg>
-            </div>
+            </label>
         </div>
         <div class="catalog__gallery">
             <div class="catalog__gallery-item"><img src="/img/product.png" alt=""></div>
