JS для аккордеона

--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -124,23 +124,32 @@
     @@include('../partials/contacts.html') @@include('../partials/footer.html')
 
     <script>
-      document.querySelectorAll('.catalog__accordion-item').forEach(item => {
-  item.addEventListener('click', () => {
-    const icon = item.querySelector('.icon');
-    icon.style.transform = icon.style.transform === 'rotate(0deg)' ? 'rotate(-90deg)' : 'rotate(0deg)';
+     document.querySelectorAll('.catalog__accordion-item').forEach(item => {
+        item.addEventListener('click', () => {
+          const icon = item.querySelector('.icon');
+          icon.style.transform = icon.style.transform === 'rotate(0deg)' ? 'rotate(-90deg)' : 'rotate(0deg)';
 
-    let nextElement = item.nextElementSibling;
+          if (item.classList.contains('catalog__accordion-subitem')) return;
 
-    while (nextElement) {
-      if (nextElement.classList.contains('catalog__accordion-subitem')) {
-        nextElement.style.display = nextElement.style.display === 'none' || nextElement.style.display === '' ? 'flex' : 'none';
-      } else {
-        break;
-      }
-      nextElement = nextElement.nextElementSibling;
-    }
-  });
-});
+          let nextElement = item.nextElementSibling;
+
+          while (nextElement) {
+            if (nextElement.classList.contains('catalog__accordion-subitem')) {
+              nextElement.style.display = nextElement.style.display === 'none' || nextElement.style.display === '' ? 'flex' : 'none';
+            } else {
+              break;
+            }
+            nextElement = nextElement.nextElementSibling;
+          }
+        });
+      });
+
+      document.querySelectorAll('.catalog__accordion-subitem').forEach(subitem => {
+        subitem.addEventListener('click', () => {
+          const icon = subitem.querySelector('.icon');
+          icon.style.transform = icon.style.transform === 'rotate(0deg)' ? 'rotate(-90deg)' : 'rotate(0deg)';
+        });
+      });
     </script>
   </body>
 </html>
