Заголовок к карточке товара (card.html)

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     @@include('../partials/header.html')
-    <main class="card__content">
-        <h1>C.A.R.D.</h1>
-        <h2>check</h2>
-    </main>
+  <div class="cardwrapper">
+    <hr class="card__divider"/>
+    <div class="card__controls">
+        <div class="card__acc">
+          <a href="/" class="card__link">Главная</a>
+          <span class="card__arrow"></span>
+          <span class="card__link card__link--highlight">Каталог товаров</span>
+          <span class="card__arrow"></span>
+          <span class="card__link card__link--highlight">Ваза из гранита</span>
+          </div>
+    </div>
+    <hr class="card__divider"/>
+
+    <h1 class="card__title">ВАЗА ИЗ ГРАНИТА «КАПУСТЯНСКОЕ»</h1>
+    <hr class="card__divider">
+    </div>
     @@include('../partials/contacts.html')
     @@include('../partials/footer.html')
 </body>
