заголовок для карточки (стили)

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -20,8 +20,13 @@
           </div>
     </div>
     <hr class="card__divider"/>
-
-    <h1 class="card__title">ВАЗА ИЗ ГРАНИТА «КАПУСТЯНСКОЕ»</h1>
+    <div class="card__header">
+        <h1 class="card__title">ВАЗА ИЗ ГРАНИТА «КАПУСТЯНСКОЕ»</h1>
+        <div class="card__info">
+            <span class="card__model">Модель: <span style="color:#9C9C9C">183260098</span></span>
+            <span class="card__article">Артикул: <span style="color: #9C9C9C">183260098</span>
+        </div>
+    </div>
     <hr class="card__divider">
     </div>
     @@include('../partials/contacts.html')
