--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -33,7 +33,9 @@
       <hr class="card__divider" />
 
      <div class="card__sliderbox">
-      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-prev"><svg class="icon" width="7" height="12" style="transform:rotate(90deg)">
+        <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
+      </svg></div>
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -56,7 +58,9 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-next"><svg class="icon" width="7" height="12" style="transform:rotate(-90deg)">
+          <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
+        </svg></div>
       </div>
   
     
