--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -32,6 +32,9 @@
       </div>
       <hr class="card__divider" />
 
+
+      <div class="card__actionblock">
+        <img src="/img/kitchen.png" alt="" width="602" height="407" />
      <div class="card__sliderbox">
       <div class="swiper-button-prev"><svg class="icon" width="7" height="12" style="transform:rotate(90deg)">
         <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
@@ -62,6 +65,7 @@
           <use xlink:href="img/symbol/sprite.svg#accordarrow"></use>
         </svg></div>
       </div>
+    </div>
   
     
       <div class="card__description-box">
