структура "В наличии" установлена

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -32,7 +32,7 @@
       </div>
       <hr class="card__divider" />
 
-
+      <div class="card__available">
       <div class="card__actionblock">
         <img src="/img/kitchen.png" alt="" width="602" height="407" />
      <div class="card__sliderbox">
@@ -66,6 +66,13 @@
         </svg></div>
       </div>
     </div>
+    <div class="card__available-info">
+      <svg class="icon" width="23" height="21">
+        <use xlink:href="img/symbol/sprite.svg#Available"></use>
+      </svg>
+      <span>В наличии</span>
+    </div>
+  </div>
   
     
       <div class="card__description-box">
