--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -140,7 +140,13 @@
                 </div>
               </div>
             </div>
-         
+
+         <div class="card__characteristics-box">
+          <label class="card__characteristics-heading">
+          <h3>Характеристики</h3>
+          <span class="card__characteristics-show"></span>
+          </label>
+         </div>
         </div>
       </div>
 
