черновой вариант блока с характеристиками

--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -146,6 +146,24 @@
           <h3>Характеристики</h3>
           <span class="card__characteristics-show"></span>
           </label>
+          <div class="card__characteristics-box-list">
+          <div class="card__characteristics-box-item">
+            <span class="card__characteristics-box-label">Вид камня</span>
+            <span class="card__characteristics-box-value">600x2000, 700x2000, 800x2000, 900x2000 мм</span>  
+          </div>
+          <div class="card__characteristics-box-item">
+            <span class="card__characteristics-box-label">Изделие</span>
+            <span class="card__characteristics-box-value">38 мм</span>  
+          </div>
+          <div class="card__characteristics-box-item">
+            <span class="card__characteristics-box-label">Месторождение</span>
+            <span class="card__characteristics-box-value">Возможно изготовление нестандартных размеров (с удорожанием)</span>  
+          </div>
+          <div class="card__characteristics-box-item">
+            <span class="card__characteristics-box-label">Цвет</span>
+            <span class="card__characteristics-box-value">Каркасно-щитовая с сотовым наполнителем</span>  
+          </div>
+        </div>
          </div>
         </div>
       </div>
