--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -117,7 +117,7 @@
           <svg class="icon" width="23" height="21">
             <use xlink:href="img/symbol/sprite.svg#Available"></use>
           </svg>
-          <span>В наличии</span>
+          <span class="card__available-info-top">В наличии</span>
           <div class="card__available-info-price">
             <span class="card__price-current">1 630 000 ₽</span>
             <span class="card__price-old">1 930 000 ₽</span>
@@ -152,8 +152,8 @@
             <span class="card__characteristics-box-value">600x2000, 700x2000, 800x2000, 900x2000 мм</span>  
           </div>
           <div class="card__characteristics-box-item">
-            <span class="card__characteristics-box-label">Изделие</span>
-            <span class="card__characteristics-box-value">38 мм</span>  
+            <span class="card__characteristics-box-label ">Изделие</span>
+            <span class="card__characteristics-box-value ">38 мм</span>  
           </div>
           <div class="card__characteristics-box-item">
             <span class="card__characteristics-box-label">Месторождение</span>
@@ -165,7 +165,10 @@
           </div>
         </div>
          </div>
+         <button class="card__available-info-button card__available-info-button--consult">Консультация бесплатно</button>
+         <button class="card__available-info-button card__available-info-button--order">Оставить заявку</button>
         </div>
+      
       </div>
 
       <div class="card__description-box">
